fix steps width on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,7 @@ body, html {
     justify-content: space-around;
     align-items: center;
     align-content: center;
-    width: 90%;
+    width: 85%;
   }
 }
 .process__etape {
