--- a/sass/Pages/_accueil.scss
+++ b/sass/Pages/_accueil.scss
@@ -160,7 +160,7 @@
             justify-content: space-around;
             align-items: center;
             align-content: center;
-            width: 90%;
+            width: 85%;
         }
     }
 
